--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -43,7 +43,7 @@
         android:layout_above="@+id/button_calc_bar_layout"
         android:background="#000" />
 
-    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:id="@+id/button_calc_bar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -53,7 +53,8 @@
         android:paddingEnd="8dp"
         android:paddingStart="8dp"
         android:paddingBottom="4dp"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:baselineAligned="true">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -65,7 +66,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingTop="8dp"
-                android:text="Discount:"
+                android:text="@string/discount_title"
                 android:textAlignment="viewEnd"
                 android:textColor="@color/text_gray"
                 android:textSize="14sp" />
